# ChessV2

./: CMakeLists.txt  main.cpp
inc/: BitOps.h  Board.h  Eval.h  Game.h  MoveGen.h
src/: BitOps.cpp  BitboardTables.cpp  Bitboards.cpp  Board.cpp  Eval.cpp  Games.cpp  MoveGen.cpp
